# HubXgit

./: .env  .env.exemple  .gitignore  Github.py  Main.py  README.md
Classe/: Github.py
langchainXinetum/: .env.example  .gitignore  .gitlab-ci.yml  README.md  langchain_inetum-0.1.0-py3-none-any.whl  main.py  prompt.py  pyproject.toml
langchainXinetum/src/: Github.py  config.py  inetum_agent.py  interfaces.py  model.py
langchainXinetum/src/inetum_genai_hub/: __init__.py  agent.py  base.py
langchainXinetum/src/utils/: env.py
src/: main.py
